# nlw-operator

./: .sesskey  Dockerfile  README.md  app.py  out.txt  pyproject.toml
assets/: script.js  style.css
core/: processor.py  webcam_recog.py  webrtc_processor.py
