[project]
name = "agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "joblib>=1.5.3",
    "mediapipe>=0.10.32",
    "numpy>=2.4.3",
    "opencv-python>=4.13.0.92",
    "python-fasthtml>=0.12.50",
    "scikit-learn>=1.8.0",
]

[tool.uv.workspace]
members = [
    "computer_vision_app",
]

[tool.setuptools]
packages = []